--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,14 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "browserify-zlib": "^0.2.0",
     "core-js": "^3.8.3",
+    "crypto-browserify": "^3.12.1",
+    "https-browserify": "^1.0.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
     "vuex": "^4.1.0"
@@ -20,8 +27,11 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4"
   },
   "eslintConfig": {
     "root": true,
