--- a/backend/agent-ia/package.json
+++ b/backend/agent-ia/package.json
@@ -16,17 +16,19 @@
     "@langchain/core": "^0.3.61",
     "@langchain/langgraph": "^0.3.4",
     "@langchain/openai": "^0.5.15",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "node-fetch": "^3.3.2",
-    "uuid": "^9.0.1",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "fs": "^0.0.1-security",
+    "node-fetch": "^3.3.2",
+    "path": "^0.12.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@types/uuid": "^9.0.7",
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.19.4",
+    "@types/uuid": "^9.0.7",
     "tsx": "^4.6.0"
   }
 }
