add scraper-service into sync-service

--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -15,5 +15,6 @@ services:
       - ELASTICSEARCH_HOSTS=${ELASTICSEARCH_HOSTS}
       - YOUTUBE_API_KEY=${YOUTUBE_API_KEY}
       - APIFY_API_TOKEN=${APIFY_API_TOKEN}
+      - SCRAPER_SERVICE_URL=${SCRAPER_SERVICE_URL}
 
     restart: unless-stopped
