--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,16 @@ dist
 
 .env
 .vscode
+
+# terraform
+.terraform
+tf.plan
+terraform.tfstate
+terraform.tfstate.backup
+.terraform.lock.hcl
+**/terraform.tfvars
+
+# ansible
+.ansible
+**/.vault_pass.txt
+**/vault.yml
