ajout metrics route + health used pour for kube

--- a/backend/sync-service/Dockerfile
+++ b/backend/sync-service/Dockerfile
@@ -8,5 +8,7 @@ RUN npm install
 COPY src/ ./src/
 # RUN npm run build
 
+# Exposition du port des métriques
+EXPOSE 3333
 
 ENTRYPOINT ["npm", "run", "dev"]
