--- a/backend/agent-ia-service/package.json
+++ b/backend/agent-ia-service/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
+    "prom-client": "^15.1.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
