--- a/backend/auth-service/package.json
+++ b/backend/auth-service/package.json
@@ -17,7 +17,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "prom-client": "^15.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
