--- a/backend/scraping-service/package.json
+++ b/backend/scraping-service/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
+    "prom-client": "^15.1.0",
     "puppeteer": "^24.8.2"
   },
   "devDependencies": {
