--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "lucide-react": "^0.487.0",
     "lucide-vue-next": "^0.487.0",
     "pinia": "^3.0.2",
+    "prom-client": "^15.1.3",
     "reka-ui": "^2.2.1",
     "tailwind-merge": "^3.2.0",
     "three": "^0.176.0",
