add good image into manifests

--- a/k3s-manifests/backend/agent-ai.yaml
+++ b/k3s-manifests/backend/agent-ai.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: agent-ai
-          image: votre-registry/agent-ai-service:latest # TODO: change
+          image: mathieuvss/agent-ai-service:latest
           env:
             - name: ELASTICSEARCH_HOSTS
               valueFrom:
