--- a/k3s-manifests/backend/sync.yaml
+++ b/k3s-manifests/backend/sync.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: sync
-          image: votre-registry/sync-service:latest # TODO: change
+          image: mathieuvss/sync-service:latest
           ports:
             - containerPort: 3333
           env:
