--- a/k3s-manifests/backend/auth.yaml
+++ b/k3s-manifests/backend/auth.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: auth
-          image: votre-registry/auth-service:latest # TODO: change
+          image: mathieuvss/auth-service:latest
           ports:
             - containerPort: 4000
           resources:
