--- a/backend/query-forge-dev/dockerfile
+++ b/backend/query-forge-dev/dockerfile
@@ -4,13 +4,14 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm i
+RUN npm ci
 
 COPY . .
 
 RUN npm run build
 
 RUN chmod +x entrypoint.sh
+RUN chmod +x entrypoint.prod.sh
 
 EXPOSE 3000
 
