--- a/compose.yaml
+++ b/compose.yaml
@@ -32,6 +32,7 @@ services:
       - JWT_SECRET=${JWT_SECRET}
       - NEST_PORT=${NEST_PORT}
       - ELASTICSEARCH_HOSTS=${ELASTICSEARCH_HOSTS}
+      - NODE_ENV=${NEST_ENV}
     entrypoint: ["sh", "./entrypoint.sh"]
     depends_on:
       - postgres
