--- a/compose.yaml
+++ b/compose.yaml
@@ -107,6 +107,9 @@ services:
       - JWT_EXPIRES_IN=${JWT_EXPIRES_IN}
       - REFRESH_TOKEN_EXPIRES_IN=${REFRESH_TOKEN_EXPIRES_IN}
       - PORT=${AUTH_PORT}
+      - EMAIL_USER=${EMAIL_USER}
+      - EMAIL_PASS=${EMAIL_PASS}
+      - FRONTEND_URL=${FRONTEND_URL}
     depends_on:
       - postgres
 
@@ -139,8 +142,10 @@ services:
       - ./frontend:/app
       - /app/node_modules # utiliser pour ecraser le node_modules de l'image avec le node_modules de ma hote machine qui est un arm ce qui cause des erreurs de build
     environment:
-      - NUXT_HOST=0.0.0.0
-      - NUXT_PORT=4444
+      - NUXT_HOST=${NUXT_HOST}
+      - NUXT_PORT=${NUXT_PORT}
+      - AUTH_BASE_URL=${AUTH_BASE_URL}
+      - NEST_BASE_URL=${NEST_BASE_URL}
     ports:
       - 4444:4444
     depends_on:
