--- a/k3s-manifests/backend/auth.yaml
+++ b/k3s-manifests/backend/auth.yaml
@@ -108,6 +108,11 @@ spec:
                 configMapKeyRef:
                   name: app-config
                   key: FRONTEND_HOST
+            - name: NEST_BASE_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: app-config
+                  key: NEST_BASE_URL
 
 ---
 apiVersion: v1
