--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
     "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/vue-table": "^8.21.3",
     "@unovis/ts": "^1.5.1",
     "@unovis/vue": "^1.5.1",
     "@vee-validate/zod": "^4.15.0",
