--- a/proxmox/ansible/inventory/hosts.ini
+++ b/proxmox/ansible/inventory/hosts.ini
@@ -1,10 +1,19 @@
 [master]
-192.168.1.181
+192.168.1.184
 
 [worker]
-192.168.1.182
-192.168.1.183
+192.168.1.185
+192.168.1.186
+
+[databases]
+postgres-db ansible_host=192.168.1.142
+elasticsearch-db ansible_host=192.168.1.144
 
 [all:vars]
 ansible_user=k3s
 ansible_ssh_pass=YOUR_PASSWORD_HERE
+
+[databases:vars]
+ansible_user=root
+lxc_password=YOUR_LXC_PASSWORD_HERE
+ansible_ssh_pass="{{ lxc_password }}"
