add mutiple fix

--- a/compose.yaml
+++ b/compose.yaml
@@ -151,6 +151,7 @@ services:
       - AUTH_BASE_URL=${AUTH_BASE_URL}
       - NEST_BASE_URL=${NEST_LOCAL_URL}
       - SCRAPER_LOCAL_URL=${SCRAPER_LOCAL_URL}
+      - AGENT_IA_HOST=${AGENT_IA_HOST}
     ports:
       - 4444:4444
     depends_on:
