--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -8,13 +8,13 @@ RUN npm install -g pnpm
 ARG AUTH_BASE_URL
 ARG NEST_BASE_URL
 ARG SCRAPER_LOCAL_URL
-ARG NUXT_PUBLIC_AI_API_URL
+ARG AGENT_IA_HOST
 
 # Set environment variables for build
 ENV AUTH_BASE_URL=$AUTH_BASE_URL
 ENV NEST_BASE_URL=$NEST_BASE_URL
 ENV SCRAPER_LOCAL_URL=$SCRAPER_LOCAL_URL
-ENV NUXT_PUBLIC_AI_API_URL=$NUXT_PUBLIC_AI_API_URL
+ENV AGENT_IA_HOST=$AGENT_IA_HOST
 
 COPY . .
 
