fix scripts and stuff for prod k3s deployment

--- a/k3s-manifests/databases/postgres-metrics.yaml
+++ b/k3s-manifests/databases/postgres-metrics.yaml
@@ -30,7 +30,7 @@ spec:
                   key: POSTGRES_URI_EXTERNAL
           envFrom:
             - secretRef:
-                name: database-secret
+                name: app-secret
 
 ---
 apiVersion: v1
