--- a/k3s-manifests/ingress/app-ingress.yaml
+++ b/k3s-manifests/ingress/app-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.tls: "true"
     traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
-    kubernetes.io/ingress.class: traefik
+    kubernetes.io/spec.ingressClassName: traefik
 spec:
   tls:
     - hosts:
