--- a/k3s-manifests/databases/elasticsearch-metrics.yaml
+++ b/k3s-manifests/databases/elasticsearch-metrics.yaml
@@ -23,7 +23,7 @@ spec:
           ports:
             - containerPort: 9108
           args:
-            - "--es.uri=http://elasticsearch-service-external:9200"
+            - "--es.uri=http://192.168.1.144:9200"
             - "--es.all"
             - "--es.indices"
             - "--es.snapshots"
