--- a/k3s-manifests/databases/postgres-metrics.yaml
+++ b/k3s-manifests/databases/postgres-metrics.yaml
@@ -27,7 +27,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: app-secret
-                  key: POSTGRES_URI_EXTERNAL
+                  key: POSTGRES_URI
           envFrom:
             - secretRef:
                 name: app-secret
